<resources>
    <string name="app_name">T1Formulario</string>
    <string name="nombre">Nombre</string>
    <string name="apellidop">Apellido Paterno</string>
    <string name="apellidom">Apellido Materno</string>
    <string name="segundonombre">Segundo nombre</string>
    <string name="fnacimiento">Fecha de nacimiento</string>
    <string name="rfc">RFC</string>
    <string name="edad">Edad</string>
    <string name="signozodiacal">Signo Zodiacal</string>
    <string name="signochino">Signo Zodiacal Chino</string>
    <string name="info">Información Recopilada</string>
    <string name="formulario">Formulario</string>
    <string name="Linformacion">Informacion</string>
    <string name="obligacion">Debes llenar los espacios marcados</string>
    <string name="obligatorio">El campo es obligatorio</string>
    <string name="guardando">Guardando los datos...</string>
    <string name="maxfech">No puede ser una fecha mayor que la de hoy</string>
    <string name="Setnombre">Escribe tu nombre</string>
    <string name="Setsnombre">Escribe tu segundo nombre</string>
    <string name="Setappaterno">Escribe tu apellido paterno</string>
    <string name="Setapmaterno">Escribe tu apellido materno</string>
    <string name="pushbtnedad">Oprime el boton de edad</string>
    <string name="pushbtnrfc">Oprime el boton de RFC</string>
    <string name="pushbtnz">Oprime el boton de Signo Zodiacal</string>
    <string name="pushbtnzc">Oprime el boton de Signo Zodiacal Chino</string>
    <string name="pushbtnfn">Oprime el boton de Fecha de Nacimiento</string>
    <string name="aries">Aries</string>
    <string name="tauro">Tauro</string>
    <string name="geminis">Géminis</string>
    <string name="cancer">Cáncer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="escorpio">Escorpio</string>
    <string name="sagitario">Sagitario</string>
    <string name="capricornio">Capricornio</string>
    <string name="acuario">Acuario</string>
    <string name="piscis">Piscis</string>
    <string name="sayajin" translatable="false">Sayajin</string>
    <string name="mono">Mono</string>
    <string name="gallo">Gallo</string>
    <string name="perro">Perro</string>
    <string name="cerdo">Cerdo</string>
    <string name="rata">Rata</string>
    <string name="buey">Buey</string>
    <string name="tigre">Tigre</string>
    <string name="conejo">Conejo</string>
    <string name="dragon">Dragon</string>
    <string name="serpiente">Serpiente</string>
    <string name="caballo">Caballo</string>
    <string name="cabra">Cabra</string>
</resources>
