<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unsc"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/halo"
        android:text="@string/formulario"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvNombre"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.597" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="12dp"
        android:background="@android:drawable/button_onoff_indicator_on"
        android:fontFamily="@font/halo"
        android:text="@string/nombre"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvSegundonombre"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.615" />

    <TextView
        android:id="@+id/tvSegundonombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/button_onoff_indicator_on"
        android:fontFamily="@font/halo"
        android:text="@string/segundonombre"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvApPat"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <TextView
        android:id="@+id/tvApPat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/button_onoff_indicator_on"
        android:fontFamily="@font/halo"
        android:text="@string/apellidop"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvApMat"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/tvSegundonombre" />

    <TextView
        android:id="@+id/tvApMat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/button_onoff_indicator_on"
        android:fontFamily="@font/halo"
        android:text="@string/apellidom"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnFNacimiento"
        app:layout_constraintEnd_toStartOf="@+id/etApMaterno"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvApPat" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="13dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="79dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/Setnombre"
        android:inputType="textPersonName"
        android:textIsSelectable="false"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etSNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:importantForAutofill="no" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="223dp" />

    <EditText
        android:id="@+id/etSNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/Setsnombre"
        android:inputType="textPersonName"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etApPaterno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.89"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etApPaterno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/Setappaterno"
        android:inputType="textPersonName"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etApMaterno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="1.0"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etApMaterno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/Setapmaterno"
        android:inputType="textPersonName"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etFNacimiento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.909"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etFNacimiento"
        android:layout_width="146dp"
        android:layout_height="41dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/pushbtnfn"
        android:inputType="date"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.951"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etEdad"
        android:layout_width="146dp"
        android:layout_height="41dp"
        android:layout_marginBottom="25dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/pushbtnedad"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/etRFC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etRFC"
        android:layout_width="146dp"
        android:layout_height="41dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/pushbtnrfc"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/etSignoZ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.779" />

    <EditText
        android:id="@+id/etSignoZ"
        android:layout_width="146dp"
        android:layout_height="41dp"
        android:layout_marginTop="168dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/pushbtnz"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <EditText
        android:id="@+id/etSignoZC"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/pushbtnzc"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/etSignoZ"
        app:layout_constraintVertical_bias="0.523" />

    <Button
        android:id="@+id/btnFNacimiento"
        android:layout_width="169dp"
        android:layout_height="48dp"
        android:fontFamily="@font/halo"
        android:text="@string/fnacimiento"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="286dp" />

    <Button
        android:id="@+id/btnEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/halo"
        android:inputType="none"
        android:text="@string/edad"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnRFC"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.596" />


    <Button
        android:id="@+id/btnRFC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/halo"
        android:inputType="none"
        android:text="@string/rfc"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnSignoZ"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.819" />

    <Button
        android:id="@+id/btnSignoZ"
        android:layout_width="145dp"
        android:layout_height="49dp"
        android:fontFamily="@font/halo"
        android:text="@string/signozodiacal"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnSignoZC"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.884" />

    <Button
        android:id="@+id/btnSignoZC"
        android:layout_width="147dp"
        android:layout_height="70dp"
        android:fontFamily="@font/halo"
        android:text="@string/signochino"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.614" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="605dp" />

    <Button
        android:id="@+id/btnInfoRec"
        android:layout_width="141dp"
        android:layout_height="59dp"
        android:background="@drawable/boton_verde"
        android:fontFamily="@font/halo"
        android:text="@string/info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="52dp"
        android:layout_height="77dp"
        android:background="@null"
        android:contentDescription="343"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toEndOf="@+id/btnInfoRec"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.673"
        app:srcCompat="@drawable/spark343" />


</androidx.constraintlayout.widget.ConstraintLayout>